--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ log = "0.4"
 prost = "0.5"
 stderrlog = "0.4"
 tokio = "0.1"
+tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }
+tower-h2 = { git = "https://github.com/tower-rs/tower-h2" }
 
 [build-dependencies]
-prost-build = { version = "0.5" }
+tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc" }
